fixing search icon alignment on larger screens

--- a/_static/src/assets/scss/objects/module/_searchBox.scss
+++ b/_static/src/assets/scss/objects/module/_searchBox.scss
@@ -88,6 +88,9 @@
     .searchBox-input {
         visibility: visible;
     }
+    .searchBox-icon {
+        top: 50%;
+    }
 }
 
 
